Fixing customer & footer overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,16 @@ cursor: pointer;
     }
 }
 
+@media only screen and (max-width: 700px) {
+    .hero .hero-left h1 {
+        font-size: 1.8rem;
+        color: #2c2c2c;
+    }
+    .hero .hero-left {
+        padding: 0 20px;
+    }
+}
+
 /*------------------------------------ testing ---------------------------------------*/
 .testing {
     display: flex;
@@ -213,6 +223,16 @@ cursor: pointer;
     }
 }
 
+@media only screen and (max-width: 700px) {
+    .testing .testing-right h2 {
+        font-size: 1.8rem;
+        color: #2c2c2c;
+    }
+    .testing {
+        padding: 0 20px;
+    }
+}
+
 
 /*--------------------- technical section ---------------------*/
 .technical-section {
@@ -261,7 +281,15 @@ cursor: pointer;
         width: 340px;
     }
 }
-
+@media only screen and (max-width: 700px) {
+    .technical-section .technical-section-left h2  {
+        font-size: 1.8rem;
+        color: #2c2c2c;
+    }
+    .technical-section{
+        padding: 0 20px;
+    }
+}
 
 /*---------------------- services section ----------------------*/
 /* .services-section {
@@ -327,6 +355,14 @@ cursor: pointer;
 }
 
 
+@media only screen and (max-width: 700px) {
+    .services-section .services-headline h2 {
+        font-size: 1.8rem;
+    }
+    .services-section {
+        padding: 0 20px;
+    }
+}
 
 
 
@@ -458,10 +494,13 @@ cursor: pointer;
     margin-top: 40px;
     box-shadow: 0 0 10px 8px rgba(5, 102, 234,.1);
 }
+@media only screen and (max-width: 1120px) {
+    .pricing-wrapper {
+        position: relative;
+    }
+}
 
-
-
-/* customer section */
+/*-------------------- customer section -------------------------*/
 
 .customer-section {
     margin-top: 100%;
@@ -518,6 +557,21 @@ cursor: pointer;
     box-shadow: 0 0 40px 20px rgba(66, 79, 98, 0.05);
 }
 
+@media only screen and (max-width: 1120px) {
+    .customer-card {
+        height: auto !important;    
+    }
+}
+@media only screen and (max-width: 925px) {
+    .customer-cards {
+        padding: 0 20px;
+    }
+}
+@media only screen and (max-width: 1125px) {
+    .customer-section {
+        margin-top: 10% !important;
+    }
+}
 
 /* footer wrapper */
 
@@ -542,6 +596,7 @@ cursor: pointer;
     align-items: center;
     height: 44vh;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .footer-container .footer .footer-left h1 {
     font-size: 2.7rem;
@@ -563,6 +618,7 @@ cursor: pointer;
     margin-top: 200px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .bottom-footer .logo-container {
     flex: 1.2;
@@ -578,6 +634,7 @@ cursor: pointer;
     flex: 2;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .bottom-footer .footer-navbar div ul {
     list-style-type: none;
@@ -603,4 +660,37 @@ cursor: pointer;
 }
 .bottom-footer .footer-navbar div:last-child ul li img {
     width: 36px;
+}
+
+
+@media only screen and (max-width: 700px) {
+    .footer-left h1 {
+        font-size: 1.6rem !important;
+    }
+    .footer-left {
+        padding: 20px 10px;
+    }
+
+    .footer-wrapper {
+        height: 50vh !important;
+    }
+    .footer-right button {
+        padding: 8px 30px;
+        font-size: 16px;
+        margin-left: 10px;
+    }
+    .footer-container .footer .footer-left p {
+        margin-top: 10px;
+    }
+    .bottom-footer {
+        display: block;
+        padding: 0 20px;
+    }
+    .bottom-footer .logo-container {
+        margin-bottom: 40px;
+    }
+    .bottom-footer .footer-navbar div:nth-child(4) {
+        margin: 0 auto;
+        margin-top: 20px;
+    }
 }
